--- a/public/face/infodetail.html
+++ b/public/face/infodetail.html
@@ -103,6 +103,23 @@
                                             <a href="#">回复</a>
                                         </div>
                                     </div>
+                                            <div class="media" style="margin-left: 40px;">
+                                                <div class="media-left">
+                                                    <a href="#">
+                                                        <img class="media-object img-cricle" src="images/1.jpg" width="45" height="45" alt="...">
+                                                    </a>
+                                                </div>
+                                                <div class="media-body">
+                                                    <h4 class="media-heading">Media heading</h4>
+                                                    <span>2015年2月1日</span>
+                                                    <p>评论内容12345679评论内容12345679评论内容12345679评论内容12345679评论内容12345679评论内容12345679评论内容12345679评论内容12345679评论内容123456798</p>
+                                                </div>
+                                                <div class="media-right ">
+                                                    <div class="huifu">
+                                                        <a href="#">回复</a>
+                                                    </div>
+                                                </div>
+                                            </div>
                                     <div class="dev"></div>
                                 </li>
                                 <li class="media">
